--- a/book/requirements.txt
+++ b/book/requirements.txt
@@ -163,7 +163,7 @@ tenacity==9.0.0
 tensorboard==2.19.0
 tensorboard-data-server==0.7.2
 tensorflow==2.19.0
-tensorflow_intel==2.18.0
+tensorflow-cpu==2.18.0
 termcolor==2.5.0
 textblob==0.19.0
 tf_keras==2.19.0
